src/tests/testfiles/function-calls/parameter-type-9.txt
Error at 3:5: Function 'printf' used before it was declared
printf("aaa \n");
^
Error at 4:5: Function 'printf' used before it was declared
printf("test %c, %f \n", '1', 1.0);
^
Error at 5:5: Function 'printf' used before it was declared
printf("test %c, %5f \n", '2', 23.948984);
^
Error at 6:5: Function 'printf' used before it was declared
printf("test %c, %i, %7f \n", '3', 528439789, 353332.53523);
^
Error at 7:5: Function 'printf' used before it was declared
printf("test %37d, %c, %i, %5f \n", 1257, '4', 4, 4.9);
^
Error at 8:5: Function 'printf' used before it was declared
printf("test %37d, %c, %i, %5f, %7s \n", 342347, '5', 4534, 4535.7, "oiejfoijfjeoairjeoi");
^
Error at 9:5: Function 'printf' used before it was declared
printf("%c%s%f%i%d%f%i%c%s", 'h', "ello", 3.14, 666, 42, 123.456, 789, '0', "1234565789");
^
